@@ -40,7 +40,7 @@ ThresholdLatencies: usedc=false;
 $Threshold latencies
 ThresholdLatencies: usedc=true;
 
-$Set
+$Set Dynamic-clamp
 SetOutput: interactive=true;
 
 $Reset
