@@ -95,12 +95,12 @@
       ea: -90mV
     atau: 100ms
   Input
-    gain: 1
+    gain: 50
   offset: 0muA/cm^2
 
 *Event Detector: Spikes-1
          minthresh: 50.0mV
-         threshold: 60.4mV
+         threshold: 50.0mV
              ratio: 70%
           maxwidth: 3.0ms
   considerstimulus: true
